Bug 830116 - remove off-main-thread calls to nsMainThreadPtrHandle::get() in error-handling paths, r=jst